--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  				I studied desktop pusblishing at the <span>Da Vinci College</span> in Dordrecht, the Netherlands. After
  				When not programmig or designing I spend my hours reading up on interesting subjects like <span>neutrinos</span> and cuddling with my beautiful daughter <span>Ava</span>.
  				<br>
- 				Mail me at <span><a href="mailto:hello@jeroenvanderwiel.com">hello@jeroenvanderwiel.com</a></span>
+ 				Mail me at <span><a href="mailto:hello@jeroenvanderwiel.com" target="_blank">hello@jeroenvanderwiel.com</a></span>
  				<br><br>
  				<table>
   					<tr><td class="table-left">2006-2006</td><td>GRAPHIC DESIGN</td></tr>
