--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
  				<h3>JEROEN VAN DER WIEL</h3>
  				Hi! I'm Jeroen van der Wiel, a <span>26 year old</span> application development student and graduated <span>Desktop Publisher</span>.
  				<br>
- 				I studied desktop pusblishing at the <span>Da Vinci College</span> in Dordrecht, the Netherlands. After
+ 				I studied desktop pusblishing at the <span>Da Vinci College</span> in Dordrecht, the Netherlands.
+ 				With a great love for <span>UI/UX</span> and <span>web design</span> and the urge to show the world the Dutch still belong to the most creative countries of the world, my goal is to one way start a design studio that aims to <span>defy</span> and <span>reshape</span> the creative scene.<br><br>
  				When not programmig or designing I spend my hours reading up on interesting subjects like <span>neutrinos</span> and cuddling with my beautiful daughter <span>Ava</span>.
- 				<br>
+ 				<br><br>
  				Mail me at <span><a href="mailto:hello@jeroenvanderwiel.com" target="_blank">hello@jeroenvanderwiel.com</a></span>
  				<br><br>
+ 				<h4>STUDIES</h4>
  				<table>
   					<tr><td class="table-left">2006-2006</td><td>GRAPHIC DESIGN</td></tr>
  					<tr><td class="table-left">2007-2007</td><td>GAME DESIGN</td></tr>
  					<tr><td class="table-left">2007-2008</td><td>IT MANAGEMENT</td></tr>
  					<tr><td class="table-left">2012-2016</td><td>DESKTOP PUBLISHING</td></tr>
+ 				</table>
+ 				<h4>WORK</h4>
+ 				<table>
+ 					<tr><td class="table-left">2015-2016</td><td><span>Lagrouw Communicatie</span><br>Internship (DTP and webdesign)</td></tr>
  				</table>
  			</article>
  	</section>
