--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
  				<br><br>
  				Mail me at <span><a href="mailto:hello@jeroenvanderwiel.com" target="_blank">hello@jeroenvanderwiel.com</a></span>
  				<br><br>
+ 				<section id="studies">
  				<h4>STUDIES</h4>
  				<table>
   					<tr><td class="table-left">2006-2006</td><td>GRAPHIC DESIGN</td></tr>
@@ -36,9 +37,11 @@
  					<tr><td class="table-left">2007-2008</td><td>IT MANAGEMENT</td></tr>
  					<tr><td class="table-left">2012-2016</td><td>DESKTOP PUBLISHING</td></tr>
  				</table>
+ 				</section>
+ 				<section id="work">
  				<h4>WORK</h4>
  				<table>
- 					<tr><td class="table-left">2015-2016</td><td><span>Lagrouw Communicatie</span><br>Internship (DTP and webdesign)</td></tr>
+ 					<tr><td class="table-left">2015-2016</td><td>LAGROUW COMMUNICATIE<br>Internship (DTP and webdesign)</td></tr>
  				</table>
  			</article>
  	</section>
